test_regress/t/t_property_pexpr_unsup.out
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:114:22: Unsupported: Unclocked assertion
                                                     : ... note: In instance 't'
  114 |    assert property ((s_eventually a) implies (s_eventually a));
      |                      ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:114:47: Unsupported: Unclocked assertion
                                                     : ... note: In instance 't'
  114 |    assert property ((s_eventually a) implies (s_eventually a));
      |                                               ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:114:4: Unsupported: Unclocked assertion
                                                    : ... note: In instance 't'
  114 |    assert property ((s_eventually a) implies (s_eventually a));
      |    ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:116:22: Unsupported: Unclocked assertion
                                                     : ... note: In instance 't'
  116 |    assert property ((s_eventually a) iff (s_eventually a));
      |                      ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:116:43: Unsupported: Unclocked assertion
                                                     : ... note: In instance 't'
  116 |    assert property ((s_eventually a) iff (s_eventually a));
      |                                           ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:116:4: Unsupported: Unclocked assertion
                                                    : ... note: In instance 't'
  116 |    assert property ((s_eventually a) iff (s_eventually a));
      |    ^~~~~~
%Error: Exiting due to
